# ipack_evaluator

./: .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  Makefile  README.md  evaluate.ipynb  evaluate_example.py  pyproject.toml
.github/: rename_project.sh
.github/workflows/: main.yml  release.yml  rename_project.yml
c_evaluator/: grocery_item.py  import_poll_results.py  packing_eval.py  utils.py
c_evaluator/data/: imported_survey_2.csv
c_evaluator/data/HOPE_3D_models/BBQSauce/google_16k/: textured_simple.mtl
c_evaluator/data/HOPE_3D_models/Butter/google_16k/: textured_simple.mtl
c_evaluator/data/HOPE_3D_models/Cherries/google_16k/: textured_simple.mtl
c_evaluator/data/HOPE_3D_models/Milk/google_16k/: textured.obj.json
c_evaluator/data/HOPE_3D_models/Mushrooms/google_16k/: textured.obj.json  textured_simple.mtl
c_evaluator/data/HOPE_3D_models/Mustard/google_16k/: textured_simple.mtl
c_evaluator/data/HOPE_3D_models/Peaches/google_16k/: textured.obj.json
c_evaluator/sim/: MujocoSim.py  __init__.py
c_evaluator/viewer/: multi_viewer.py
ipack_evaluator/: import_poll_results.py  packing_eval.py  packing_eval_utils.py
ipack_evaluator/data/: hope_mapping.json  import_survey_2.py  responses.csv  responses_survey_2.xlsx
ipack_evaluator/sim/: MujocoSim.py
ipack_evaluator/viewer/: packing_viewer.py  save_viewer.py  viewer_base.py
scripts/: evaluate_gopt.py  evaluate_jerry-3dbp.py  evaluate_llm_pack.py  evaluate_wadaboa_1.py  run_combined.sh
scripts/cache/: groceries_from_poll.json
tests/: test_base.py
(+25 files in other folders)
